# sqlite2parquet

./: .gitignore  ARCHIVE.md  Cargo.toml  README.md
src/: conversion.rs  lib.rs  main.rs  schema.rs
