[package]
name = "sqlite2parquet"
description = "Generate parquet files from sqlite databases"
version = "0.9.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/asayers/sqlite2parquet"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.2.4", optional = true, features = ["derive"] }
crossterm = { version = "0.23.0", optional = true }
fallible-streaming-iterator = "0.1.9"
parquet = { version = "16.0.0", default-features = false, features = ["zstd"] }
parquet-format = "4.0.0"
rusqlite = "0.27.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = { version = "0.8.24", optional = true }
thousands = { version = "0.2.0", optional = true }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", optional = true }

[features]
cli = ["clap", "crossterm", "serde_yaml", "thousands", "tracing-subscriber"]
default = ["cli"]
