[package]
name = "sqlite2parquet"
description = "Generate parquet files from sqlite databases"
version = "0.10.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/asayers/sqlite2parquet"

[dependencies]
anyhow = "1.0.59"
clap = { version = "3.2.16", optional = true, features = ["derive"] }
crossterm = { version = "0.24.0", optional = true }
fallible-streaming-iterator = "0.1.9"
parquet = { version = "27.0.0", default-features = false, features = ["zstd"] }
rusqlite = "0.28.0"
serde = { version = "1.0.141", features = ["derive"] }
serde_yaml = { version = "0.9.2", optional = true }
thousands = { version = "0.2.0", optional = true }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", optional = true }

[features]
cli = ["clap", "crossterm", "serde_yaml", "thousands", "tracing-subscriber"]
default = ["cli"]
