[package]
name = "sqlite2parquet"
description = "Generate parquet files from sqlite databases"
version = "0.10.1"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/asayers/sqlite2parquet"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4", optional = true, features = ["derive"] }
crossterm = { version = "0.27", optional = true }
fallible-streaming-iterator = "0.1.9"
parquet = { version = "46", default-features = false, features = ["zstd"] }
rusqlite = "0.29"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = { version = "0.9.25", optional = true }
thousands = { version = "0.2.0", optional = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", optional = true }

[features]
cli = ["clap", "crossterm", "serde_yaml", "thousands", "tracing-subscriber"]
default = ["cli"]
